--- a/luke-common/pom.xml
+++ b/luke-common/pom.xml
@@ -3,10 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.ryoukai.luke</groupId>
+        <artifactId>luke</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+    </parent>
 
-    <groupId>com.ryoukai.luke</groupId>
     <artifactId>luke-common</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <name>luke-common</name>
+    <description>luke-common</description>
 
-    
 </project>
