--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
     <groupId>com.ryoukai.luke</groupId>
     <artifactId>luke</artifactId>
+    <packaging>pom</packaging>
     <name>luke</name>
     <description>luke</description>
 
