--- a/luke-parent/pom.xml
+++ b/luke-parent/pom.xml
@@ -20,8 +20,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <mybatisplus-spring-boot-starter.version>1.0.5</mybatisplus-spring-boot-starter.version>
-        <mybatisplus.version>2.1.9</mybatisplus.version>
+        <mybatisplus-boot-starter.version>2.1.9</mybatisplus-boot-starter.version>
         <fastjson.version>1.2.46</fastjson.version>
         <druid.version>1.1.9</druid.version>
         <commons-net.version>3.6</commons-net.version>
@@ -35,6 +34,11 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-boot-starter</artifactId>
+                <version>${mybatisplus-boot-starter.version}</version>
+            </dependency>
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
