--- a/luke-parent/pom.xml
+++ b/luke-parent/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.ryoukai</groupId>
+    <groupId>xyz.ryoukai</groupId>
     <artifactId>luke-parent</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
@@ -37,7 +37,7 @@
         <dependencies>
             <!--一方包-->
             <dependency>
-                <groupId>com.ryoukai.luke</groupId>
+                <groupId>xyz.ryoukai.luke</groupId>
                 <artifactId>luke-common</artifactId>
                 <version>${luke.version}</version>
             </dependency>
@@ -82,6 +82,16 @@
                 <groupId>org.apache.zookeeper</groupId>
                 <artifactId>zookeeper</artifactId>
                 <version>${zookeeper.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.slf4j</groupId>
+                        <artifactId>slf4j-log4j12</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>log4j</groupId>
+                        <artifactId>log4j</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>com.baidu.unbiz</groupId>
